<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:orientation="vertical"
    tools:context=".Calculator">

    <!-- this will show the history of the calculator -->
    <LinearLayout
        android:id="@+id/lineLayHist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/calcScreen"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <TextView
            android:id="@+id/histOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textAlignment="viewEnd"/>
        <TextView
            android:id="@+id/histTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textAlignment="viewEnd"/>

        <TextView
            android:id="@+id/histThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textAlignment="viewEnd"/>

        <TextView
            android:id="@+id/histFour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textAlignment="viewEnd"/>

        <TextView
            android:id="@+id/histFive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textAlignment="viewEnd"/>


    </LinearLayout>

    <!--The top row of the calculator, buttons:
      A/C, C, +/-, x -->
    <LinearLayout
        android:id="@+id/lineLay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calcScreen"
        android:gravity="center">

        <Button
            android:id="@+id/acBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/acBtn"/>

        <Button
            android:id="@+id/cBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cBtn" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/negBtn"
            android:text="@string/negBtn"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/multBtn"
            android:layout_weight="1"
            android:text="@string/multBtn"/>


    </LinearLayout>

    <!-- this row has the 7 8 9 and div buttons -->
    <LinearLayout
        android:id="@+id/lineLay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineLay1">


        <Button
            android:id="@+id/sevBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sevBtn" />

        <Button
            android:id="@+id/eightBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/eightBtn" />

        <Button
            android:id="@+id/nineBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/nineBtn" />

        <Button
            android:id="@+id/divBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/divBtn" />
    </LinearLayout>

    <!-- this row has the 4 5 6 and - buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lineLay3"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/lineLay2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/fourBtn"
            android:text="@string/fourBtn"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/fiveBtn"
            android:text="@string/fiveBtn"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/sixBtn"
            android:text="@string/sixBtn"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/subBtn"
            android:text="@string/subBtn"/>

    </LinearLayout>

    <!-- this row has the 1 2 3 and + buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/lineLay4"
        app:layout_constraintTop_toBottomOf="@id/lineLay3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/oneBtn"
            android:text="@string/oneBtn"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/twoBtn"
            android:text="@string/twoBtn"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/threeBtn"
            android:text="@string/threeBtn"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/addBtn"
            android:text="@string/addBtn"/>
    </LinearLayout>

    <!-- this row has the . 0 and = buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lineLay5"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/lineLay4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/deciBtn"
            android:text="@string/deciBtn"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/zeroBtn"
            android:text="@string/zeroBtn"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/equalBtn"
            android:text="@string/equalBtn"/>

    </LinearLayout>

    <!--The Calculator Screen-->
    <TextView
        android:id="@+id/calcScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="232dp"
        android:textSize="50sp"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="viewEnd"
        android:background="@color/colorPrimary"/>


</androidx.constraintlayout.widget.ConstraintLayout>