<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StatsActivity">

    <!-- TextView to display the directions -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/statsInfo"
        android:text="@string/statsInfo"
        android:layout_marginTop="35dp"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <!-- TextView to display the directions -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submitInfo"
        android:text="@string/submitInfo"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <!-- TextView to display entered numbers -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/statsScreen"
        android:background="@color/colorPrimary"
        android:textSize="50sp"
        android:textAlignment="viewEnd"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="10dp"/>

    <!-- Linear Layout to contain buttons 7 8 9 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/senLineLay"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/sevStatBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sevBtn"
            android:textSize="20sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/eightBtn"
            android:id="@+id/eiStatBtn"
            android:textSize="20sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/nineBtn"
            android:layout_weight="1"
            android:id="@+id/ninStatBtn"
            android:textSize="20sp"
            />
    </LinearLayout>

    <!-- Buttons 4 5 6 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ffsLineLay"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fourStatBtn"
            android:text="@string/fourBtn"
            android:layout_weight="1"
            android:textSize="20sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fivStatBtn"
            android:layout_weight="1"
            android:text="@string/fiveBtn"
            android:textSize="20sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/sixStatBtn"
            android:text="@string/sixBtn"
            android:layout_weight="1"
            android:textSize="20sp"/>
    </LinearLayout>

    <!-- Buttons 1 2 3 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ottLineLay"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textSize="20sp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/oneStatBtn"
            android:text="@string/oneBtn"
            android:textSize="20sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/twoStatBtn"
            android:text="@string/twoBtn"
            android:textSize="20sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/thrStatBtn"
            android:text="@string/threeBtn"
            android:textSize="20sp"/>
    </LinearLayout>

    <!-- Buttons . 0 and enter number -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/dzeLineLay"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/decStatBtn"
            android:text="@string/deciBtn"
            android:layout_weight="1"
            android:textSize="20sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/zerStatBtn"
            android:text="@string/zeroBtn"
            android:textSize="20sp"/>

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/enterBtn"
            android:src="@drawable/ic_enter_check"
            />

    </LinearLayout>

    <!-- Backspace and Submit Buttons-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/bsLineLay"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/backBtn"
            android:src="@drawable/ic_backspace"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/submitBtn"
            android:text="@string/submitBtn"
            android:textSize="20sp"/>

    </LinearLayout>



    <!-- See entered numbers -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:id="@+id/dataLineLay"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dataText"
            android:text="@string/dataText"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dataNum"
            android:textAlignment="center"
            android:textSize="20sp"/>

    </LinearLayout>

    <!-- See mean -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:id="@+id/meanLineLay"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/meanText"
            android:text="@string/meanText"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/meanNum"
            android:textAlignment="center"
            android:textSize="20sp"/>

    </LinearLayout>

    <!-- See median -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:id="@+id/medianLineLay"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/medianText"
            android:text="@string/medianText"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/medianNum"
            android:textAlignment="center"
            android:textSize="20sp"/>

    </LinearLayout>

    <!-- See mode -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:id="@+id/modeLineLay"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/modeText"
            android:text="@string/modeText"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/modeNum"
            android:textAlignment="center"
            android:textSize="20sp"/>

    </LinearLayout>

    <!-- See range -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:id="@+id/rangeLineLay"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rangeText"
            android:text="@string/rangeText"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rangeNum"
            android:textAlignment="center"
            android:textSize="20sp"/>

    </LinearLayout>





</androidx.appcompat.widget.LinearLayoutCompat>